# obook

./: .gitignore  README.md  binanceus_BTCUSD_feeder.config.js  binanceus_BTCUSD_recorder.config.js  ftx_BNBPERP_feeder.config.js  ftx_BNBPERP_recorder.config.js  ftx_BTCPERP_feeder.config.js  ftx_BTCPERP_recorder.config.js  ftx_BTCUSD_feeder.config.js  ftx_BTCUSD_recorder.config.js  ftx_ETHPERP_feeder.config.js  ftx_ETHPERP_recorder.config.js  ftx_LTCPERP_feeder.config.js  ftx_LTCPERP_recorder.config.js  ftx_XRPPERP_feeder.config.js  ftx_XRPPERP_recorder.config.js  live_data_service.config.js  live_data_service.js  markets_config.json  models.py  orderbook_feeder.py  orderbook_reader_example.py  orderbook_record_model.py  orderbook_watchdog.config.js  orderbook_watchdog.py  package.json  resilient_orderbook_reader.py  restart_all_services.sh  restart_data_services.sh  slack_lib.py  start_all_services.sh  start_live_data_service.sh  start_orderbook_service.py  start_orderbook_service.sh  start_orderbook_watchog.sh  start_recording_orderbook.sh  universal_listenner.py
cpp_obook/: CMakeLists.txt  README.MD  arbitrager.py  binance_orderbook_feeder.py  binance_receiver.py  ccxwstryout.js  cexio_receiver.py  eth_ob.sh  exchange_receiver.py  feed_recorder.py  listenner_user.py  live_data_service.js  ltc_ob.sh  markets_config.py  (+24 more)
liborderbook/: CMakeLists.txt  README.MD  orderbook.cpp  orderbook.hpp  orderbook_helper.py  orderbook_python_funcs.cpp  orderbook_wrapper.cpp  sidebook.cpp  sidebook.hpp  sidebook_python_funcs.cpp
liborderbook/cmake/Modules/: BuildBoost.cmake
(+1 files in other folders)
